[package]
name = "jwt_hmac"
version = "0.2.0"
edition = "2018"
keywords = ["jwt", "authentication"]
categories = ["authentication"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/h-i-v-e/jwt_hmac"
homepage = "https://github.com/h-i-v-e/jwt_hmac"
readme = "README.md"
description = "A simple library for generating and parsing JWT tokens using HMAC SHA256 as per https://jwt.io/introduction"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64-url = "1.4.13"
hmac = "0.12.1"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
sha2 = "0.10.6"
